Fix alignment

--- a/client/src/assets/css/SectionCountry.css
+++ b/client/src/assets/css/SectionCountry.css
@@ -28,13 +28,13 @@
     flex-flow: row wrap;
     align-items: center;
     height: 60px;
-    column-gap: 500px;
+    column-gap: 400px;
     columns: 6rem auto;
     flex: 1 0 auto;
 }
 
 .stats .height, .stats .weight, .stats .decade_year{
-    flex: 1 0 auto;
+    flex: 1 0 10px;
 }
 
 .participation-container .participation{
